# lab

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  default.nix  dictionary.json  flake.nix  home.nix  lib.nix  overlay.nix
crates/: Cargo.toml
crates/anki-tool/: Cargo.toml  README.md
crates/anki-tool/src/: anki.rs  main.rs
crates/greeting/: Cargo.toml
crates/greeting/src/: lib.rs
crates/hello-cli/: Cargo.toml
crates/hello-cli/src/: main.rs
crates/nord-cli/: Cargo.toml  README.md
crates/nord-cli/src/: main.rs
crates/nord-format/: Cargo.toml  README.md
crates/nord-format/src/: crc.rs  error.rs  lib.rs  types.rs  util.rs
crates/nord-format/src/common/: bank.rs  header.rs  mod.rs  piano.rs  program.rs  sample.rs  settings.rs  song.rs
crates/nord-format/src/electro5/: bundle.rs  live.rs  mod.rs  program.rs  settings.rs  song.rs
crates/nord-format/tests/: bank.rs  ne5.rs  song.rs  types.rs
crates/nord-format/tests/corpus/: README.md  settings.ne5s  song.ne5t
crates/nord-format/tests/corpus/programs/center_panel/: o00_0_p000_0_1_6_50_50.ne5p  o00_0_p000_1_1_0_50_50.ne5p  o00_0_p001_0_5_0_50_50.ne5p  o00_0_p100_0_1_0_50_50.ne5p  o00_0_s000_0_1_0_25_50.ne5p  o00_1_p000_0_1_0_50_50.ne5p
crates/nord-format/tests/corpus/programs/equalizer/: 0_000000000000.ne5p  1_000000000127.ne5p  1_127000000000.ne5p
crates/nord-format/tests/corpus/programs/fx/: fx1_100_0.ne5p  fx2_100_0.ne5p  fx3_100_0.ne5p  fx4_100_0_0.ne5p  fx5_100_0.ne5p
crates/nord-format/tests/corpus/programs/gain/: 0.ne5p  10.ne5p  5.ne5p
crates/nord-format/tests/corpus/programs/organ/: 1000010000000000.ne5p  1000_000000000.ne5p  1010100000000000.ne5p  1010_000000000.ne5p  1100_880000000.ne5p  1200_876543210.ne5p  1300_00012.ne5p  1300_888888808.ne5p  1400_00013.ne5p  1400_rrrrrrrrr.ne5p
crates/nord-format/tests/corpus/programs/sample/: 100_01_000_d000.ne5p  100_01_000_r127.ne5p  100_01_000_s064.ne5p  100_42_000_d000.ne5p
docs/: book.toml
hosts/: axolotl.nix  badger.nix  lynx.nix  meerkat.nix
keys/: lynx-ssh.pub
modules/: apps.nix  asahi.nix  astronvim.nix  cinnamon.nix  claude.nix  common.nix  darwin.nix  default.nix  devshell.nix  direnv.nix  ghostty.nix  greetd.nix  guake.nix  home-manager.nix  home.nix  hyprland.nix  hyprpolkitagent.nix  iterm2.nix  iwmenu.nix  k3s.nix  karabiner.nix  lab.nix  locale.nix  mosh.nix  nix.nix  nixos.nix  nixpkgs.nix  nuphy75.nix  obsidian.nix  orca-slicer.nix  pass.nix  perSystem.nix  shell.nix  ssh.nix  sublime-merge.nix  sublime.nix  tailscale.nix  theme.nix  ulauncher.nix  vscode.nix  (+2 more)
new-hosts/: axolotl.nix  lynx.nix  meerkat.nix
new-modules/: asahi.nix  darwin.nix  default.nix  ghostty.nix  home.nix  k3s.nix  karabiner.nix  nixos.nix  shell.nix  vscode.nix
nodes/: falcon.nix  lynx.nix  macaw.nix  meerkat.nix
pkgs/: powerlevel10k-media.nix
resources/: jmoo-dark-icons.json  jmoo-dark.json  jmoo-template.json  yarra-valley.json
scripts/: claude-loop.bash  git-sync.bash  (+4 more)
(+109 files in other folders)
