[package]
name = "anki-tool"
description = "CLI for querying AnkiConnect, designed for AI agent consumption"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
