[package]
name = "nord-format"
description = "Parse and write Clavia / Nord keyboard binary file formats (Electro 5, …)"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "nord_format"

[features]
default = []
# ZIP-based backup bundles pull in the `zip` stack; opt in with `--features
# bundle`. Off by default so parse-only consumers (and the corpus round-trip
# tests, which never touch bundles) stay lean.
bundle = ["dep:zip"]
# The corpus-backed round-trip/decode tests (tests/ne5.rs) need the private
# specimen corpus (NORD_CORPUS_DIR). Off by default so the open minimal suite
# runs anywhere; the Nix `nord-format-corpus` check enables it. Test-only.
corpus = []

[dependencies]
binrw = "0.14"
crcxx = "0.3.1"
thiserror = "2"
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }

[dev-dependencies]
regex = "1"
